--- a/index.html
+++ b/index.html
@@ -13,27 +13,42 @@
     <section class="page-header">
       <h1 class="project-name">Humming Bird Flight Systems</h1>
       <h2 class="project-tagline">What goes up needn&#39;t come down</h2>
-      <a href="https://github.com/angelinaxena/hover-phone" class="btn">View on GitHub</a>
-      <a href="https://github.com/angelinaxena/hover-phone/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/angelinaxena/hover-phone/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Use Cases.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub for Mac or GitHub for Windows, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p> Your whole life is on your phone - your memories, your travel plans, your loved ones’ information. To lose your phone to a careless slip of your hand is unacceptable. And with the innovative Hummingbird flight system, your worries can float away. 
+Perfect for the perpetually clumsy and for those who just want some extra security, Hummingbird keeps your phone exactly where you want it. 
+Our innovative system allows you to select Portrait or Landscape hover modes, with the emergency monitor ensuring that your phone never touches the ground - unless you put it there!
+Hummingbird can lead the way as you walk down the street or even through your house, thanks to our flight motion technology. </p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical Explanation</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Our state of the art multirotor cellular phone flight system uses the best-in-class accelerometer and feather-light carbon graphene rotor technology to effectively sustain flight for up to 25 minutes. 
+Our aftermarket solutions are battle-tested in the most rigorous environments, and we hold our manufacturers to the highest standard.
+Our accelerometer that detects when the phone enters free-fall is the same technology that multiple militaries teams use for their UAV and semi-autonomous drone needs. The gyroscopic stabilizer effortlessly rights the phone during free-fall, and maintains a stable heading and orientation in every scenario. 
+We’ve assembled the best industrial designers from JPL, NASA, Apple, and IKEA, who have constructed lightweight, effective, and flexible inconel titanium alloy rotor wings that weigh less than 1.2 grams, and are sturdy enough to cut through belligerent human flesh with ease. 
+Our 2.6 K motor is one of the most power-efficient yet powerful on the market, producing over 500 grams of thrust per propeller. 
+The combination of the powerful motors, durable yet lightweight rotors, and expertly-made chassis mean that your Hummingbird flight system will maintain height and speed in the harshest wind, cold, or rain. The carefully-constructed carbon-fiber housing protects the internal components from sand, snow, or other particulates. .</p>
 
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>About the Company</h3>
+
+<p> Cornelius “GrandPappy” Handler - Founder, President, perpetual visionary
+Cornelius comes from a long line of inventors, eyes turned skyward since he worked on his first steam-powered flying robot at age 3. His vision lives on in all of us. 
+
+The Admiral - Head Feasibility Engineer
+The Admiral hails from a sterling military career, and now uses his experience with military flight technology to further advance the Hummingbird system. 
+
+Sean Hagstrom - Head of Aeronautical Engineering
+Angie Hayden - Gyroscopic Engineer and QA Lead
+Corey Davis - Chassis Designer
+Batya Zamansky - Aftermarket Installation Soutions
+Antonis Stampoulis - Rotor Architect and Chief Lunch Officer
+Parth Padgaonkar - Seismographic Graphene Constructor</p>
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
