--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Humming Bird Flight Systems</h1>
+      <h1 class="project-name"><img src="https://s3.amazonaws.com/uploads.hipchat.com/56587/385923/IuZhDR2QYaqp2Sq/logo.on.transparent.png"/></h1></h1>
       <h2 class="project-tagline">What goes up needn&#39;t come down</h2>
     </section>
 
